--- a/data.html
+++ b/data.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         
   
@@ -23,9 +23,8 @@
               <a class="nav-link" href="comparison.html">Comparison</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Visualizations</a>
-              <div class="dropdown-menu" aria-labelledby="dropdown03">
-                <a class="dropdown-item" href="visualizations/temperature.html">Temperature</a>
+              <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Visualizations</a>              <div class="dropdown-menu" aria-labelledby="dropdown03">
+                <a class="dropdown-item" href="visualizations/temp.html">Temperature</a>
                 <a class="dropdown-item" href="visualizations/cloudiness.html">Cloudiness</a>
                 <a class="dropdown-item" href="visualizations/wind_speed.html">Wind Speed</a>
                 <a class="dropdown-item" href="visualizations/humidity.html">Humidity</a>
@@ -40,7 +39,8 @@
         <section class="row">
           <div class="col-md-8">
             <article class="description-content">
-              <h1 class="description-header">Data</h1>
+              <p></p>
+              <h2 class="description-header"> City Weather Data</h2>
               <hr class="description-hr"/>
             </article>
       <div class="table-responsive">
