--- a/visualizations/wind.html
+++ b/visualizations/wind.html
@@ -33,7 +33,7 @@
             <li class="nav-item dropdown">
               <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Visualizations</a>
               <div class="dropdown-menu" aria-labelledby="dropdown03">
-                <a class="dropdown-item" href="visualizations/temperature.html">Temperature</a>
+                <a class="dropdown-item" href="/visualizations/temp.html">Temperature</a>
                 <a class="dropdown-item" href="visualizations/cloudiness.html">Cloudiness</a>
                 <a class="dropdown-item" href="visualizations/wind_speed.html">Wind Speed</a>
                 <a class="dropdown-item" href="visualizations/humidity.html">Humidity</a>
@@ -52,9 +52,5 @@
         <div class="col-md-9">
           <article class="description-content">
             <p></p>
-            <h1 class="description-header">Summary: Wind Speed</h1>
+            <h1 class="description-header">Latitude vs. Weather Conditions (per cities)</h1>
             <hr class="description-hr"/>
-            <img src="resources/Fig1.png" alt="" id="description-image"/>
-            <p>
-
-            </p>
