--- a/visualizations/temp.html
+++ b/visualizations/temp.html
@@ -52,5 +52,27 @@
         <div class="col-md-9">
           <article class="description-content">
             <p></p>
-            <h1 class="description-header">Latitude vs. Weather Conditions (per cities)</h1>
+            <h1 class="description-header">Latitude vs. Temperature (per cities)</h1>
             <hr class="description-hr"/>
+          </article>
+        </div>
+        <div class="col-md-12">
+          <div class="card bg-light mb-" style="max-width: 60rem;">
+            <div class="card-header"><h4>Visualizations and Analysis</h4></div>
+            <p >
+              <section id="imageNav-area">
+                  <div class="imageNav-content">
+                      <p> Looking at the two charts, one can determine the reason for the differences in correlation. However prediction of the value of the Max Temperature based on the Latitude of the Northern and Southern hemisphere is not explicitly clear in the southern hemisphere data.
+                        There is a correlation between the linear regression dependent on the season. In the Northern hemisphere in the winter months one can predict from the the linear regression.
+                        As seen in the northern_hemisphere the scatter plot has a tighter grouping of dots around the regression line and a higher r-squared value. It has a medium rsquared value. The r value is negative and close to -1 which means that the two variables are inversely related.
+                        Whereas the southern hemisphere the dots are more spread out and the dots are not located on the line. The r value is positive and closer to 0 which means that the two variables are loosely related.</p>
+                    <div id="images">
+                      <a href="/temp.html"><img src="/resources/Fig1.png" width="400" 
+                        height="300" alt="Latitude vs. Max Temperature" class="imageNav-photo"></a>
+                    </div>
+                  </div>
+                  </section>
+
+              <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+              </body>
+              </html>
