--- a/data.html
+++ b/data.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="resources/css/style.css" media="screen">
+
   </head>
-  <body>
-    
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+
         
-  
+      <body>
+        <a class="blog-header-logo text-dark" href="#">
+        <nav class="navbar navbar-expand-sm navbar-white bg-light">
         <div class="collapse navbar-collapse" id="navbarsExample03">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
@@ -34,14 +36,15 @@
          </ul>
         </div>
       </nav>
-      <div class="container">
+      <div class="container-fluid">
         <section class="row">
-          <div class="col-md-8">
+          <div class="col-md-10">
             <article class="description-content">
               <p></p>
-              <h2 class="description-header"> City Weather Data</h2>
+              <h1 class="description-header"> City Weather Data</h1>
               <hr class="description-hr"/>
             </article>
+            <p>The purpose of this project was to analyze how weather changes as one navigates the latitudes. This is the data collected.
       <div class="table-responsive">
         <table class="table table-striped table-sm">
             <thead>
