--- a/visualizations/cloudiness.html
+++ b/visualizations/cloudiness.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css" media="screen">
+    <link rel="stylesheet" href="resources/css/style.css"  media="screen">
 
 </head>
 
@@ -18,13 +18,13 @@
         <div class="collapse navbar-collapse" id="navbarsExample03">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html">Latitude </a>
+              <a class="nav-link" href="/index.html">Latitude </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="data.html">Data</a>
+              <a class="nav-link" href="/data.html">Data</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="comparison.html">Comparison</a>
+              <a class="nav-link" href="/comparison.html">Comparison</a>
             </li>
 
               
@@ -33,10 +33,10 @@
             <li class="nav-item dropdown">
               <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Visualizations</a>
               <div class="dropdown-menu" aria-labelledby="dropdown03">
-                <a class="dropdown-item" href="/visualizations/temp.html">Temperature</a>
-                <a class="dropdown-item" href="visualizations/cloudiness.html">Cloudiness</a>
-                <a class="dropdown-item" href="visualizations/wind_speed.html">Wind Speed</a>
-                <a class="dropdown-item" href="visualizations/humidity.html">Humidity</a>
+                <a class="dropdown-item" href="temp.html">Temperature</a>
+                <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
+                <a class="dropdown-item" href="wind.html">Wind Speed</a>
+                <a class="dropdown-item" href="humidity.html">Humidity</a>
 
               </div>
             </li>
@@ -52,5 +52,34 @@
         <div class="col-md-9">
           <article class="description-content">
             <p></p>
-            <h1 class="description-header">Latitude vs. Weather Conditions (per cities)</h1>
+            <h1 class="description-header">Latitude vs. Cloudiness</h1>
             <hr class="description-hr"/>
+          </article>
+        </div>
+        <div class="col-md-12">
+          <div class="card bg-light mb-" style="max-width: 60rem;">
+            <div class="card-header"><h4>Visualizations and Analysis</h4></div>
+            <p >
+              <section id="imageNav-area">
+                  <div class="imageNav-content">
+                      <p> In these two graphs, the Southern hemisphere scatter plot has a tighter grouping of dots around the regression line and a higher r-squared value than the northern hemisphere. However, both relationship models have a low rsquared value and weak correlation. However, the northern hemisphere has a higher r-value than the southern hemisphere.
+
+                        Both plots show a r-value thaqt is positive and less than .50 which means that the two variables are loosely related.
+                        
+                        </p>
+                        <div id="images">
+                          <a href="/cloudiness.html"><img src="/resources/north_cloud.png" width="400" 
+                            height="300" alt="Latitude vs. Max Temperature" class="imageNav-photo"></a>
+                            <a href="/cloudiness.html"><img src="/resources/south_cloud.png" width="400" 
+                              height="300" alt="Latitude vs. Max Temperature" class="imageNav-photo"></a>
+                            </div>
+                    <div id="images">
+                      <a href="/cloudiness.html"><img src="/resources/Fig3.png" width="400" 
+                        height="300" alt="Latitude vs. Cloudiness" class="imageNav-photo"></a>
+                    </div>
+                  </div>
+                  </section>
+
+              <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+              </body>
+              </html>
