--- a/visualizations/temp.html
+++ b/visualizations/temp.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css" media="screen">
+    <link rel="stylesheet" href="resources/css/style.css" media="screen">
 
 </head>
 
@@ -18,13 +18,13 @@
         <div class="collapse navbar-collapse" id="navbarsExample03">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html">Latitude </a>
+              <a class="nav-link" href="/index.html">Latitude </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="data.html">Data</a>
+              <a class="nav-link" href="/data.html">Data</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="comparison.html">Comparison</a>
+              <a class="nav-link" href="/comparison.html">Comparison</a>
             </li>
 
               
@@ -33,10 +33,10 @@
             <li class="nav-item dropdown">
               <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Visualizations</a>
               <div class="dropdown-menu" aria-labelledby="dropdown03">
-                <a class="dropdown-item" href="/visualizations/temp.html">Temperature</a>
-                <a class="dropdown-item" href="visualizations/cloudiness.html">Cloudiness</a>
-                <a class="dropdown-item" href="visualizations/wind_speed.html">Wind Speed</a>
-                <a class="dropdown-item" href="visualizations/humidity.html">Humidity</a>
+                <a class="dropdown-item" href="temp.html">Temperature</a>
+                <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
+                <a class="dropdown-item" href="wind.html">Wind Speed</a>
+                <a class="dropdown-item" href="humidity.html">Humidity</a>
 
               </div>
             </li>
@@ -52,7 +52,7 @@
         <div class="col-md-9">
           <article class="description-content">
             <p></p>
-            <h1 class="description-header">Latitude vs. Temperature (per cities)</h1>
+            <h2 class="description-header">Latitude vs. Temperature (per cities)</h2>
             <hr class="description-hr"/>
           </article>
         </div>
@@ -66,7 +66,13 @@
                         There is a correlation between the linear regression dependent on the season. In the Northern hemisphere in the winter months one can predict from the the linear regression.
                         As seen in the northern_hemisphere the scatter plot has a tighter grouping of dots around the regression line and a higher r-squared value. It has a medium rsquared value. The r value is negative and close to -1 which means that the two variables are inversely related.
                         Whereas the southern hemisphere the dots are more spread out and the dots are not located on the line. The r value is positive and closer to 0 which means that the two variables are loosely related.</p>
-                    <div id="images">
+                        <div id="images">
+                          <a href="/temp.html"><img src="/resources/north_temp.png" width="400" 
+                            height="300" alt="Latitude vs. Max Temperature" class="imageNav-photo"></a>
+                            <a href="/temp.html"><img src="/resources/south_temp.png" width="400" 
+                              height="300" alt="Latitude vs. Max Temperature" class="imageNav-photo"></a>
+                            </div>
+                      <div id="images">
                       <a href="/temp.html"><img src="/resources/Fig1.png" width="400" 
                         height="300" alt="Latitude vs. Max Temperature" class="imageNav-photo"></a>
                     </div>
